# DualMind

./: .gitignore  .retrigger  CONVERSATION.md  DECISIONS.md  MEMORY.md  PROTOCOL.md  README.md  STATUS.json  TASK.md  USER.md
bridge/: .last_hash  watcher.sh
mind-a/: PERSONALITY.md
mind-b/: PERSONALITY.md
workspace/: pyproject.toml
workspace/rulelint/: __init__.py  __main__.py  cli.py  detection.py  extraction.py  ingestion.py  models.py  store.py  web.py
workspace/tests/: conftest.py  ground_truth.json  test_cli.py  test_detection.py  test_e2e.py  test_extraction.py  test_ingestion.py  test_models.py  test_store.py  test_web.py
